# Signal_Fusion_with_Meta-learners-

./: .gitignore  Pipeline_DataFlow_Report.docx  Pipeline_Diagram.mermaid  README.md  STAGE2_REFACTOR_CHANGELOG.md  pyproject.toml  stage2_analysis.docx  stage2_diagnostic_overview.md  stage2_full_analysis.docx
Data/: ESG_Data_AXEF.xlsx  Stock_Monthly_Market_Cap.csv  Stock_Monthly_Market_Cap.xlsx  Stock_Monthly_Trading.csv  Stock_Monthly_Trading.xlsx  Stocks_1.xlsx  Stocks_Monthly_ClosingPrices.csv  Stocks_Monthly_ClosingPrices.xlsx  Stocks_Monthly_Shares.csv  Stocks_Monthly_Shares.xlsx  Stocks_beta_correl_etc.csv  contract_year.csv  contract_year_clean.csv  contract_year_final.csv  dim_ci_stso_contracts_metadata.csv  dim_supplier.csv  financials_clean.csv  ~$bronze_moodys_industry.xlsx
Notebooks/: 17_stage2_maml_benchmark.ipynb  17_stage2_maml_updated.ipynb  19.0_synthetic_augmentation_experiment.ipynb  Indexes.ipynb  MAML.ipynb  Snorkel_labeling.ipynb  contract_year.json  contract_year_new.ipynb  esg.ipynb  financials.ipynb  joining.ipynb  news.ipynb  stage2_input_prep.ipynb
experiments/: backfill_stage1_artifacts.py  run_experiment_groups.sh  run_stage1.py  run_stage2.py  run_thesis_benchmark.sh  stage1_config.yaml  stage2_config.yaml  validate_stage1_artifacts.py  validate_stage2_config.py  validate_stage2b_accounting.py
models/: mlp_pretrained.pt  mlp_training_history.csv
notebooks/: 01_prepare_contract_year.ipynb  02_prepare_esg.ipynb  03_prepare_financials.ipynb  04_prepare_indexes.ipynb  05_prepare_news.ipynb  06_prepare_stocks.ipynb  07_joining.ipynb  08_contracts_eda.ipynb  09_esg_eda.ipynb  10_financials_eda.ipynb  12_news_eda.ipynb  13_prepare_gold_labels.ipynb  13_stocks_eda.ipynb  14.1_prepare_gold_labels.ipynb  14_feature_engineering.ipynb  15.1_prepare_gold_labels.ipynb  15_snorkel_labeling.ipynb  16_stage1_baselines-kopi.ipynb  16_stage1_baselines.ipynb  16_stage_1_baselines.ipynb  16_stage_1_baselines_updated.ipynb  16_stage_1_baselines_updated_v2.ipynb  17.1_stage2_analysis_dashboard.ipynb  17_stage2_meta_learning.ipynb  17_stage2_meta_learning_plot_supported.ipynb  17_stage2_meta_learning_updated.ipynb  17_stage_2_maml.ipynb  17_stage_2_maml_detailed.ipynb  (+3 more)
(+2067 files in other folders)
