[project]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "ThomasRoennebek",email = "hansen.fodbold@live.dk"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.5.4,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "torchaudio (>=2.10.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "master_thesis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
