[project]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = [
    { name = "ThomasRoennebek", email = "hansen.fodbold@live.dk" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "notebook",
    "ipykernel",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "xlrd",
    "xlsxwriter",
    "scipy",
    "torch",
    "torchvision",
    "torchaudio",
    "snorkel",
    "xgboost",
    "shap",
]

[tool.poetry]
packages = [{include = "master_thesis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
